infra/k8s/auth-depl.yaml
# ipcluster
apiVersion: v1
kind: Service
metadata:
  name: auth-srv #name of service
spec: # tells service how to behave
  selector:
    app: auth #which pod to attach service to
  type: ClusterIP #type of service
  ports:
    - name: auth
      protocol: TCP
      port: 4001 #clusterIp port
      targetPort: 4001 #port specified on the app
