infra/k8s/auth-mongo-depl.yaml
# ipcluster
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv #name of service
spec: # tells service how to behave
  selector:
    app: auth-mongo #which pod to attach service to
  type: ClusterIP #type of service
  ports:
    - name: db
      protocol: TCP
      port: 27017 #clusterIp port
      targetPort: 27017 #default port for mongodb
