infra/k8s/client-depl.yaml
# ipcluster service
apiVersion: v1
kind: Service
metadata:
  name: client-srv #name of service
spec: # tells service how to behave
  selector:
    app: client #which pod to attach service to
  type: ClusterIP #type of service
  ports:
    - name: client
      protocol: TCP
      port: 3000 #clusterIp port
      targetPort: 3000 #port specified on the app
